Tinkering with index.html

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>My First Website</title>
     </head>
-
     <body>
-        Hello, boys!
+        <h1>Hello, boys!</h1>
     </body>
 </html>
