Further tinkering with index.html contents

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My First Website</title>
+        <title>My First Webpage</title>
     </head>
+
     <body>
         <h1>Hello, boys!</h1>
     </body>
