--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML>
-<html lang="en">
+<!DOCTYPE html>
+<html>
     <head>
         <meta charset="UTF-8">
-        <title>My First Webpage</title>
+        <title>My First Website</title>
     </head>
 
     <body>
